--- a/WhoWantToBeAMillionaire.csproj
+++ b/WhoWantToBeAMillionaire.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddQuestionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddQuestionsForm.Designer.cs">
+      <DependentUpon>AddQuestionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,20 +61,22 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="QuestionMaker.cs" />
+    <EmbeddedResource Include="AddQuestionsForm.resx">
+      <DependentUpon>AddQuestionsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -82,7 +91,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\daco_4833978_EsB_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\Khsm_logo_big.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GnomeInGlasses.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\help50x50.png" />
@@ -94,10 +109,13 @@
     <None Include="Resources\helpGuys.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\daco_4833978_EsB_icon.ico" />
+    <None Include="Resources\maximGalkin.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\ExitApplication.jpg" />
+    <Content Include="Resources\exitDoor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Questions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
