--- a/App.config
+++ b/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WhoWantToBeAMillionaire.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <WhoWantToBeAMillionaire.Properties.Settings>
+            <setting name="IsSoundEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="QuestionsFilename" serializeAs="String">
+                <value>Questions.xml</value>
+            </setting>
+            <setting name="UserSaveFilePath" serializeAs="String">
+                <value />
+            </setting>
+        </WhoWantToBeAMillionaire.Properties.Settings>
+    </userSettings>
 </configuration>
