--- a/WhoWantToBeAMillionaire.csproj
+++ b/WhoWantToBeAMillionaire.csproj
@@ -32,6 +32,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>daco_4833978_EsB_icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -47,18 +51,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditorQuestionsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditorQuestionsForm.Designer.cs">
+      <DependentUpon>EditorQuestionsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="EditQuestionsForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EditQuestionsForm.Designer.cs">
       <DependentUpon>EditQuestionsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GameStatistics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -67,15 +78,28 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="QuestionMaker.cs" />
+    <Compile Include="ScrollQuestions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScrollQuestions.Designer.cs">
+      <DependentUpon>ScrollQuestions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SoundController.cs" />
+    <EmbeddedResource Include="EditorQuestionsForm.resx">
+      <DependentUpon>EditorQuestionsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditQuestionsForm.resx">
       <DependentUpon>EditQuestionsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ScrollQuestions.resx">
+      <DependentUpon>ScrollQuestions.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -112,13 +136,27 @@
     <None Include="Resources\maximGalkin.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\numberDialed.wav" />
+    <None Include="Resources\helpGuysSound.wav" />
+    <None Include="Resources\help50x50Sound.wav" />
+    <None Include="Resources\winnerSound.wav" />
+    <None Include="Resources\wrongAnswer.wav" />
+    <None Include="Resources\gameBegins.wav" />
+    <None Include="Resources\winImage.jpg" />
+    <None Include="Resources\selectionBar.png" />
+    <None Include="Resources\rightEmptyPanel.png" />
+    <None Include="Resources\buttonPressedSound.wav" />
+    <None Include="Resources\soundDown.png" />
+    <None Include="Resources\soundUp.png" />
+    <None Include="Resources\buttonPressed.wav" />
+    <None Include="Resources\correctAnswer.wav" />
+    <None Include="Resources\answerWaits.wav" />
+    <Content Include="daco_4833978_EsB_icon.ico" />
     <Content Include="Resources\exitDoor.png" />
     <None Include="Resources\helpCallPressed.png" />
     <None Include="Resources\help50x50Pressed.png" />
     <None Include="Resources\helpGuysPressed.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\Questions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
